Wondering if flaptastic kicks in

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
+                    <properties>
+                        <configurationParameters>
+                            junit.jupiter.extensions.autodetection.enabled = true
+                        </configurationParameters>
+                    </properties>
                 </configuration>
                 <version>2.22.1</version>
             </plugin>
