--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
                 <version>2.22.0</version>
                 <configuration>
                     <argLine>
-                        --illegal-access=permit
+                        -illegal-access=permit
                     </argLine>
                 </configuration>
             </plugin>
