--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,4 +38,15 @@ jobs:
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
       # run tests!
-      - run: mvn integration-test
+      - run:
+          name: Run maven integration-test
+          environment:
+            FLAPTASTIC_ORGANIZATION_ID: "391671105087920294"
+            FLAPTASTIC_VERBOSITY: 3
+          command: |
+            echo 'export FLAPTASTIC_BRANCH=$CIRCLE_BRANCH' >> $BASH_ENV
+            echo 'export FLAPTASTIC_LINK=$CIRCLE_BUILD_URL' >> $BASH_ENV
+            echo 'export FLAPTASTIC_SERVICE=$CIRCLE_PROJECT_REPONAME' >> $BASH_ENV
+            echo 'export FLAPTASTIC_COMMIT_ID=$CIRCLE_SHA1' >> $BASH_ENV
+            source $BASH_ENV
+            mvn integration-test
